# GitScope

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.server.json  vite.config.ts
brand/: .gitignore
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: forensics.rs  git.rs  lib.rs  recent.rs  stash.rs  symbols.rs
src-tauri/src/ai/: catalog.rs  commands.rs  download.rs  mod.rs  paths.rs  server.rs
src/client/: App.tsx  api.ts  global.css  main.tsx
src/client/components/: BackgroundDecor.tsx  BranchSelector.tsx  CommitGraph.tsx  CommitLog.tsx  CommitPanel.tsx  ConfirmModal.tsx  DiffView.tsx  FileHistory.tsx  FileTree.tsx  ForensicsDashboard.tsx  InteractiveRebaseModal.tsx  LocalAiSettings.tsx  ManualPaletteEditor.tsx  RemoteSyncButton.tsx  RepoSelector.tsx  SettingsModal.tsx  SpiceLevel.tsx  StashAccordion.tsx  StashPanel.tsx  StatusBar.tsx  ThemeSelector.tsx  Toast.tsx  WelcomeScreen.tsx  WindowControls.tsx
src/client/components/forensics/: ContributorCard.tsx  HeatmapCard.tsx  HotspotCard.tsx  TrendChart.tsx
src/client/lib/: decorSettings.ts  diffPatch.ts  displaySettings.ts  dragRegion.ts  graph.ts  hotspotContext.tsx  themeGenerator.ts
src/client/lib/ai/: anthropic.ts  index.ts  local.ts  types.ts  validation.ts
src/server/: forensics-service.ts  git-service.ts  index.ts
