[package]
name = "app"
version = "0.4.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
tree-sitter = "0.26"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-c-sharp = "0.23"

# Local AI (Phase 11-B) — 모델/바이너리 다운로드 + sidecar 실행
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
tokio = { version = "1", features = ["fs", "rt-multi-thread", "macros", "process", "io-util"] }
futures-util = { version = "0.3", default-features = false }
sha2 = "0.10"
zip = { version = "2", default-features = false, features = ["deflate"] }
